--- a/report/main.tex
+++ b/report/main.tex
@@ -11,6 +11,7 @@
 \tableofcontents
 \pagebreak
 
+
 \section{Introduction}
 
 As part of the CS2323 Computer Architecure course, we had to develop an assembler
@@ -44,7 +45,7 @@ $ make test
 
 \section{Planning}
 
-FIrst, the structure of the assembler was outlined, and important design decisions
+First, the structure of the assembler was outlined, and important design decisions
 were taken.
 
 
@@ -53,12 +54,12 @@ were taken.
 The first step in converting assembly code to machine code is to read the program
 and parse it into semantic elements such as instructions and labels.
 
-Since there problem statement makes several assumptions about the code (such
+Since the problem statement makes several assumptions about the code (such
 as having one instruction per line, one space after each comma, etc.), it is possible
 to parse the code using only simple functions like \texttt{scanf}.
 
 However, I decided to do for a more structured approach, using separate tokenization
-and parsing steps, to give practical utility to the assembler.
+and parsing steps, to make the assembler more flexible and useful.
 
 \subsection{One-pass versus Multi-pass}
 
@@ -67,8 +68,8 @@ multi-pass assemblers.
 
 A one-pass assembler processes the source code once, and patches earlier output
 based on later definitions of symbols. On the other hand, multi-pass assemblers
-create a symbol table in the first pass, and then use it to generate code in the 
-second pass.
+create a symbol tables in the first few passes, and then use them to generate code in the 
+last pass.
 
 It is common to see assembly code that refers to labels defined later in the program:
 
@@ -94,7 +95,9 @@ the machine code for each instruction, substituting labels for their addresses.
 The program that the assembler receives as input need not be correct. It can have syntactic
 and semantic errors, and the assembler is expected to find and report these errors.
 
-My goal was to build an error reporting system similar to   
+My goal was to build an error reporting system similar to compilers such as GCC or Clang,
+which report the location of the error along with the error message, and also print out 
+the part of the code where the error occurred.
 
 Unlike other popular languages such as C++ and Java, C lacks an inbuilt exception-handling
 system. Programmers have to implement error handling themselves.
@@ -115,8 +118,8 @@ struct Result {
         \begin{enumerate}
             \item Having to allocate memory in leaf functions where
                 errors will be thrown.
-            \item Having to check each function call for an error value.
-            \item Less type safety guarantees as the value is returned
+            \item Having to check for error every time a function is called.
+            \item Less type safety guarantees as the data is returned
                 in a \texttt{void} pointer.
         \end{enumerate}
 
@@ -152,8 +155,8 @@ and also doesn't add as much overhead as the first method.
 
 \subsection{Bottom-up Parsing}
 
-There are several strategies for parsing a languages. Languages with
-elaborate syntax use top-down parsers. However, due to the simple
+There are several strategies for parsing a language. Languages with
+elaborate syntax often use top-down parsers. However, due to the simple
 syntax of assembly, and due to the simplicity of implementation, i
 chosse a bottom-up parser design.
 
